--- a/help/using/docs-updates/docs-2016.md
+++ b/help/using/docs-updates/docs-2016.md
@@ -1,16 +1,16 @@
 ---
 description: Liste de la documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
-seo-description: Liste de la documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
-seo-title: Mises à jour de la documentation 2016
+seo-description: A list of new and revised Audience Manager documentation released in 2016. Includes minor updates or changes to the Audience Manager guide that might not be included in the Experience Cloud release notes.
+seo-title: 2016 Documentation Updates
 solution: Audience Manager
 title: Mises à jour de la documentation 2016
 uuid: 940846e2-25aa-4136-8342-6341707f5197
-feature: Présentation
+feature: Overview
 exl-id: f344dfdb-75c5-4931-81ca-f6de25e26929
-source-git-commit: 319be4dade263c5274624f07616b404decb7066f
+source-git-commit: 3f4a161ee856357b5cb5eb757ad779dee5357b09
 workflow-type: tm+mt
-source-wordcount: '1411'
-ht-degree: 26%
+source-wordcount: '1381'
+ht-degree: 27%
 
 ---
 
@@ -37,12 +37,12 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
    <td colname="col2"> <p>Révision afin d’inclure de nouvelles informations et de clarifier et de style. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../dil/dil-use-cases.md#traffic-dil-gtm"> DIL de trafic dans Google Tag Manager (GTM)  </a> </p> </td> 
-   <td colname="col2"> <p>Après une mise à jour de Google en mai 2016, vous pouvez charger le code du DIL dans la section HTML personnalisée d’une balise. Vous n’avez plus besoin d’héberger le code à distance. </p> </td> 
+   <td colname="col1"> <p> <a href="../dil/dil-use-cases.md#traffic-dil-gtm"> DIL de trafic dans Google Tag Manager (GTM) </a> </p> </td> 
+   <td colname="col2"> <p>Après une mise à jour de Google en mai 2016, vous pouvez charger le code de DIL dans la section de HTML personnalisée d’une balise. Vous n’avez plus besoin d’héberger le code à distance. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-data-collection.md"> FAQ sur la collecte de données et l’intégration de produit </a> </p> </td> 
-   <td colname="col2"> <p>Inclut une nouvelle entrée sur les <span class="keyword"> Audience Manager </span> adresses IP et FTP. </p> </td> 
+   <td colname="col2"> <p>Inclut une nouvelle entrée sur la liste blanche <span class="keyword"> Audience Manager</span> Adresses IP et FTP. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-privacy.md"> FAQ sur la rétention des données et la confidentialité </a> </p> </td> 
@@ -54,7 +54,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../dil/dil-modules.md#ga-submit-universal-analytics"> GA.submitUniversalAnalytics </a> </p> </td> 
-   <td colname="col2"> <p>Documentation qui décrit une nouvelle méthode de DIL qui vous permet d’envoyer des données à <span class="keyword"> Audience Manager</span> à partir d’Universal Analytics de Google. </p> </td> 
+   <td colname="col2"> <p>Documentation qui décrit une nouvelle méthode de DIL qui vous permet d’envoyer des données à <span class="keyword"> Audience Manager</span> de Google Universal Analytics. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -71,7 +71,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  <tbody> 
   <tr> 
    <td colname="col1"> <a href="../reference/visitor-authentication-states.md"> États d’authentification du visiteur dans Audience Manager </a> </td> 
-   <td colname="col2"> <span class="keyword"> Audience </span> Manager gère les états d’authentification de l’identifiant visiteur  <code> UNKNOWN</code> et  <code> LOGGED_OUT</code> de la même manière. Le document fournit des informations supplémentaires sur la façon dont nous gérons les appels d’événement <code> setCustomerID</code>. </td> 
+   <td colname="col2"> <span class="keyword"> Audience Manager</span> gère les états d’authentification de l’identifiant visiteur. <code> UNKNOWN</code> et <code> LOGGED_OUT</code> de la même manière. Le document fournit des informations supplémentaires sur la façon dont nous gérons la <code> setCustomerID</code> appels d’événement. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../reference/cid.md"> CID remplace DPID et DPUUID </a> </td> 
@@ -79,23 +79,23 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/ids-in-aam.md"> Index des identifiants dans Audience Manager </a> </p> </td> 
-   <td colname="col2"> <p>Consultez ce document pour obtenir la liste complète des <span class="keyword"> identifiants d’Audience Manager</span>. </p> </td> 
+   <td colname="col2"> <p>Consultez ce document pour obtenir une liste complète des <span class="keyword"> Audience Manager</span> ID. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-audience-lab.md"> FAQ sur Audience Lab </a> </p> </td> 
-   <td colname="col2"> <p>Questions fréquentes sur la fonction <span class="wintitle"> Audience Lab</span>. </p> </td> 
+   <td colname="col2"> <p>Questions fréquentes sur le <span class="wintitle"> Audience Lab</span> fonction . </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/addressable-audiences.md#date-ranges"> Périodes dans les audiences et destinations adressables  </a> </p> </td> 
-   <td colname="col2"> <p>Nouveau contenu qui décrit le fonctionnement des intervalles de temps pour les <span class="wintitle"> audiences adressables</span> et les <span class="wintitle"> destinations</span>. </p> </td> 
+   <td colname="col1"> <p> <a href="../features/addressable-audiences.md#date-ranges"> Périodes dans les audiences et destinations adressables </a> </p> </td> 
+   <td colname="col2"> <p>Nouveau contenu qui décrit le fonctionnement des intervalles de temps pour <span class="wintitle"> Audiences adressables</span> et <span class="wintitle"> Destinations</span>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/addressable-audiences.md#addressable-audience-metrics"> Mesures d’audience adressables  </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../features/addressable-audiences.md#addressable-audience-metrics"> Mesures d’audience adressables </a> </p> </td> 
    <td colname="col2"> <p>Mise à jour des descriptions pour les nouvelles mesures de rapport et révision. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/destinations/destinations-home.md"> Page d’accueil des destinations </a> </p> </td> 
-   <td colname="col2"> <p>Nouveau contenu qui décrit les fonctionnalités sur la page d’entrée <span class="wintitle"> Destinations</span> . </p> </td> 
+   <td colname="col2"> <p>Nouveau contenu qui décrit les fonctionnalités de la <span class="wintitle"> Destinations</span> landing page. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -112,7 +112,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  <tbody> 
   <tr> 
    <td colname="col1"> <a href="../integration/receiving-audience-data/real-time-outbound-transfers/oauth-in-outbound-transfers.md"> Intégration OAuth 2.0 pour les transferts sortants en temps réel </a> </td> 
-   <td colname="col2">Ajout de la capacité de sécuriser votre transfert de données sortantes en temps réel via le protocole OAuth 2.0. Contactez votre <span class="keyword"> consultant Adobe Audience Manager</span> pour commencer. </td> 
+   <td colname="col2">Ajout de la capacité de sécuriser votre transfert de données sortantes en temps réel via le protocole OAuth 2.0. Contactez votre <span class="keyword"> Adobe Audience Manager</span> consultant pour commencer. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/algorithmic-models/understanding-models.md"> Modèles algorithmiques </a> </p> </td> 
@@ -123,7 +123,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
    <td colname="col2"> <p>Correction de noms d’en-tête incorrects fournis dans la pièce jointe de l’email de désactivation. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/declared-ids.md#declared-id-variables"> Variables d’ID déclarées  </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../features/declared-ids.md#declared-id-variables"> Variables d’ID déclarées </a> </p> </td> 
    <td colname="col2"> <p>Correction d’un lien rompu vers la documentation du service d’ID. </p> </td> 
   </tr> 
   <tr> 
@@ -132,7 +132,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../dil/dil-modules.md#ga-init"> GA.init </a> </p> </td> 
-   <td colname="col2"> <p>Révision afin de noter que <code> GA.init()</code> ne fonctionne pas avec la dernière version du code d’analyse de Google, <code> analytics.js</code>. </p> </td> 
+   <td colname="col2"> <p>Révision de la remarque : <code> GA.init()</code> ne fonctionne pas avec la dernière version du code d’analyse de Google, <code> analytics.js</code>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/amazon-s3.md"> À propos d’Amazon S3 </a> </p> </td> 
@@ -140,7 +140,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/profile-merge-rules/merge-rule-definitions.md"> Définition des options des stratégies de fusion de profils </a> </p> </td> 
-   <td colname="col2"> <p>Révision afin d’inclure plus d’informations sur <span class="keyword"> Adobe Experience Cloud Device Co-op</span>. </p> </td> 
+   <td colname="col2"> <i>Cette fonction a été abandonnée.</i><p>Révision afin d’inclure plus d’informations sur la variable <span class="keyword"> Adobe Experience Cloud Device Co-op</span>. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -165,7 +165,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../dil/dil-overview.md"> Présentation de Data Integration Library (DIL) </a> </td> 
-   <td colname="col2">Présentation générale de la <span class="wintitle"> Bibliothèque d’informations sur les données</span> (DIL). </td> 
+   <td colname="col2">Un aperçu général de la <span class="wintitle"> Bibliothèque d’informations sur les données</span> (DIL). </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-file-contents.md"> Contenu du fichier de données entrant : syntaxe, caractères non valides, variables et exemples </a> </td> 
@@ -180,7 +180,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
    <td colname="col2"> <p> Audience Manager utilise le temps universel coordonné (UTC) sur l’ensemble de son interface utilisateur. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../api/api-swagger-migration.md"> Migration du code de l’API  </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../api/api-swagger-migration.md"> Migration du code de l’API </a> </p> </td> 
    <td colname="col2"> <p>Ajout de liens vers les API de groupe de test de segment et l’API de demande de flux de données. </p> </td> 
   </tr> 
  </tbody> 
@@ -217,12 +217,12 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
    <td colname="col2"> <p>Ajout de nouveaux codes d’erreur relatifs aux clients à l’index. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../dil/dil-instance-methods.md#securedatacollection"> secureDataCollection  </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../dil/dil-instance-methods.md#securedatacollection"> secureDataCollection </a> </p> </td> 
    <td colname="col2"> <p>Contrôlez la manière dont DIL effectue des appels de collecte de données avec HTTP ou HTTPS. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-api.md"> FAQ sur l’API </a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour du contenu expliquant pourquoi DIL utilise les méthodes <code> GET</code> et <code> POST</code> pour envoyer des données dans un appel d’événement. </p> </td> 
+   <td colname="col2"> <p>Mise à jour du contenu expliquant pourquoi DIL utilise <code> GET</code> et <code> POST</code> méthodes pour envoyer des données dans un appel d’événement. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/receiving-audience-data/real-time-outbound-transfers/real-time-outbound-transfers.md"> Transferts de données sortantes en temps réel </a> </p> </td> 
@@ -242,7 +242,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <a href="../reporting/onboarding-status-report.md#onboarding-status-about"> Rapport d’état de l’intégration : A propos  </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../reporting/onboarding-status-report.md#onboarding-status-about"> Rapport d’état de l’intégration : A propos </a> </p> </td> 
    <td colname="col2"> <p>Documentation révisée pour la reconception de l’interface utilisateur. </p> </td> 
   </tr> 
   <tr> 
@@ -251,11 +251,11 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/audience-optimization-reports.md"> Rapports d’Audience Optimization</a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour des rapports <span class="wintitle"> Audience Optimization</span>avec conversion cross-canal, contrôle d’accès en fonction du rôle, groupes de conversion et caractéristiques de conversion consignées. </p> </td> 
+   <td colname="col2"> <p>Mise à jour de la <span class="wintitle"> Audience Optimization</span>rapports avec conversion multicanaux, contrôle d’accès en fonction du rôle, groupes de conversion et caractéristiques de conversion rapportées. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/aor-advertisers/cross-channel-conversion-reporting.md"> Conversion inter-canaux </a> </p> </td> 
-   <td colname="col2"> <p>L’option <span class="wintitle"> Cross Channel Conversion</span> des rapports <span class="wintitle"> Audience Optimization</span> vous permet d’attribuer des conversions hors ligne aux impressions ou clics en ligne diffusés. </p> </td> 
+   <td colname="col2"> <p>Le <span class="wintitle"> Conversion cross-canal</span> dans le <span class="wintitle"> Audience Optimization</span> Les rapports vous permettent d’attribuer des conversions hors ligne à des impressions ou des clics en ligne diffusés. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/aor-advertisers/reported-conversion-traits.md"> Caractéristiques de conversion rapportées </a> </p> </td> 
@@ -284,7 +284,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  <tbody> 
   <tr> 
    <td colname="col1"> <p> Transfert côté serveur </p> </td> 
-   <td colname="col2"> <p>Suppression de la documentation <span class="keyword"> Audience Manager</span> de septembre 2017. Déplacement vers la documentation <span class="keyword"> Analytics</span>. </p> </td> 
+   <td colname="col2"> <p>Supprimé de <span class="keyword"> Audience Manager</span> documentation de septembre 2017. Déplacé vers <span class="keyword"> Analytics</span> documentation. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/media-data-integration/impression-data-pixels.md"> Capture des données d’impression de campagne via des appels de pixel </a> </p> </td> 
@@ -349,7 +349,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/traits/trait-comparison-operators.md"> Utilisation d’opérateurs de comparaison dans TraitBuilder  </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../features/traits/trait-comparison-operators.md"> Utilisation d’opérateurs de comparaison dans TraitBuilder </a> </p> </td> 
    <td colname="col2"> <p>Ajout d’un nouvel opérateur nommé, <code> Matcheswords</code>. Vous pouvez ainsi spécifier des modèles de mots correspondants sans utiliser d’expression régulière. </p> </td> 
   </tr> 
  </tbody> 
@@ -367,11 +367,11 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-providers/marketplace-create-manage-feeds.md#deactivate-data-feed"> Désactivation du flux de données d’un abonné </a> </p> </td> 
-   <td colname="col2"> <p>Décrit la manière dont les fournisseurs de données <span class="wintitle"> Audience Marketplace</span> désactivent le flux d’un abonné. </p> </td> 
+   <td colname="col2"> <p>Décrit comment <span class="wintitle"> Audience Marketplace</span> les fournisseurs de données désactivent le flux d’un abonné. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-manage-subscriptions.md">Que se passe-t-il une fois qu’un fournisseur désactive mon flux de données ?</a> </p> </td> 
-   <td colname="col2"> <p>Décrit ce à quoi peut s’attendre un acheteur de données <span class="wintitle"> Audience Marketplace</span> si un fournisseur révoque l’accès à un flux de données. </p> </td> 
+   <td colname="col2"> <p>Décrit ce qu’un <span class="wintitle"> Audience Marketplace</span> l’acheteur de données peut s’attendre à ce qu’un fournisseur révoque l’accès à un flux de données. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données </a> </p> </td> 
@@ -402,12 +402,12 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <a href="../api/rest-api-main/aam-api-getting-started.md#oauth"> Authentification OAuth  </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../api/rest-api-main/aam-api-getting-started.md#oauth"> Authentification OAuth </a> </p> </td> 
    <td colname="col2"> <p>Ajout d’un lien pour l’authentification autorisée et implicite. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/integrating-third-party/rlsa-integration.md"> Envoi de segments vers une liste de remarketing Google AdWords </a> </p> </td> 
-   <td colname="col2"> <p>Instructions sur l’envoi de données de segment à une liste de remarketing Google AdWords. </p> </td> 
+   <td colname="col2"> <p>Instructions sur l’envoi de données de segment à une liste de remarketing AdWords Google. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/visitor-profile-viewer.md"> Visionneuse de profil du visiteur </a> </p> </td> 
@@ -415,11 +415,11 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../dil/dil-class-overview/dil-create.md#dil-create"> Création DIL </a> </p> </td> 
-   <td colname="col2"> <p>Révision du texte pour <code> declaredId</code>. Les ID de client doivent être transmis en tant que valeurs non codées uniquement. Le codage des ID crée des identifiants codés deux fois. </p> </td> 
+   <td colname="col2"> <p>Texte révisé pour <code> declaredId</code>. Les ID de client doivent être transmis en tant que valeurs non codées uniquement. Le codage des ID crée des identifiants codés deux fois. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-s2s/dcs-s2s-calls.md"> Lancement d’appels d’API DCS serveur à serveur</a> </p> </td> 
-   <td colname="col2" morerows="1"> <p>Modification du texte pour inclure la variable <code> d_mid</code>. </p> </td> 
+   <td colname="col2" morerows="1"> <p>Révision du texte afin d’inclure le <code> d_mid</code> . </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-api-reference/dcs-keys.md"> Attributs pris en charge pour les appels de l’API DCS</a> </p> </td> 
@@ -430,11 +430,11 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/metadata-files-intro/datafiles-intro.md"> Fichiers de données pour les rapports d’Audience Optimization</a> </p> </td> 
-   <td colname="col2"> <p>Ajout d’une nouvelle description pour <span class="wintitle"> Event Type</span>. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une nouvelle description pour <span class="wintitle"> Type d’événement</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-providers/marketplace-billing-report.md">Présentation du rapport de facturation des fournisseurs de données</a> (en anglais) </p> </td> 
-   <td colname="col2"> <p>Nouvelle documentation qui répertorie et définit les éléments dans un rapport de facturation <span class="wintitle"> Audience Marketplace</span>. </p> </td> 
+   <td colname="col2"> <p>Nouvelle documentation qui répertorie et définit les éléments d’une <span class="wintitle"> Audience Marketplace</span> rapport de facturation. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/segments/segment-builder-data.md">Données sur la taille de segment et les caractéristiques dans le créateur de segments</a> (en anglais) </p> </td> 
