--- a/help/using/docs-updates/docs-2017.md
+++ b/help/using/docs-updates/docs-2017.md
@@ -1,15 +1,15 @@
 ---
 description: Liste de la documentation nouvelle ou révisée publiée en 2017 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
-seo-description: Liste de la documentation nouvelle ou révisée publiée en 2017 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
-seo-title: Mises à jour de la documentation 2017
+seo-description: A list of new or revised documentation released in 2017 and previous years. Includes minor updates to the Audience Manager documentation that might not be covered in the Experience Cloud release notes.
+seo-title: 2017 Documentation Updates
 solution: Audience Manager
 title: Mises à jour de la documentation 2017
 uuid: 575245c0-68ae-4ba1-8041-4217e55f4103
-feature: Présentation
+feature: Overview
 exl-id: a3a1f03c-5073-4de7-ad57-5c9999f7c4f3
-source-git-commit: 319be4dade263c5274624f07616b404decb7066f
+source-git-commit: 3f4a161ee856357b5cb5eb757ad779dee5357b09
 workflow-type: tm+mt
-source-wordcount: '2004'
+source-wordcount: '1975'
 ht-degree: 23%
 
 ---
@@ -53,7 +53,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../api/dcs-intro/dcs-api-reference/dcs-keys.md"> Attributs pris en charge pour les appels de l’API DCS</a> </p> </td> 
-   <td colname="col2"> <p>À titre de référence, nous avons ajouté les attributs réservés <code> d_dst_filter</code> et <code> d_rs</code> aux attributs <code> d_</code> documentés. Nous vous déconseillons de créer des caractéristiques qui utilisent des attributs réservés. Adobe peut modifier les attributs réservés à tout moment. </p> </td> 
+   <td colname="col2"> <p>À titre de référence, nous avons ajouté les attributs réservés. <code> d_dst_filter</code> et <code> d_rs</code> aux <code> d_</code> attributs. Nous vous déconseillons de créer des caractéristiques qui utilisent des attributs réservés. Adobe peut modifier les attributs réservés à tout moment. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-and-segment-qualification-reference.md"> Référence de qualification des traits</a> </p> </td> 
@@ -90,7 +90,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../api/dcs-intro/dcs-api-reference/dcs-keys.md"> Attributs pris en charge pour les appels de l’API DCS</a> </p> </td> 
-   <td colname="col2"> <p>Ajout de <code> d_cts</code> comme paramètre facultatif dans la liste des clés disponibles pour les requêtes DCS. Vous devez contacter votre conseiller Adobe Audience Manager ou l’assistance clientèle pour l’activer. </p> </td> 
+   <td colname="col2"> <p>Ajout <code> d_cts</code> comme paramètre facultatif dans la liste des clés disponibles pour les requêtes DCS. Vous devez contacter votre conseiller Adobe Audience Manager ou l’assistance clientèle pour l’activer. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reference/reporting-file-transfer-timeframe.md"> Incidence de la diffusion des données et des délais de traitement des fichiers sur les rapports</a> </p> </td> 
@@ -131,11 +131,11 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../integration/media-data-integration/actionable-log-files.md"> Fichiers journaux pratiques</a> </p> </td> 
-   <td colname="col2"> <p>Découvrez pourquoi <span class="wintitle"> Fichiers journaux pratiques</span> est la méthode recommandée pour importer des fichiers journaux DCM dans <span class="keyword"> Audience Manager</span> et découvrez comment commencer à utiliser cette fonctionnalité. </p> </td> 
+   <td colname="col2"> <p>Découvrez pourquoi <span class="wintitle"> Fichiers journaux pratiques</span> est la méthode recommandée pour importer des fichiers journaux DCM dans <span class="keyword"> Audience Manager</span> et découvrez comment vous pouvez commencer à utiliser cette fonctionnalité. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reporting/audience-optimization-reports/aor-advertisers/import-dcm.md"> Importation de fichiers de données DCM dans Audience Manager</a> </p> </td> 
-   <td colname="col2"> <p>Ajout de l’étape 7, sur ce que vous devez faire pour activer les <span class="wintitle"> fichiers journaux pratiques</span> après avoir configuré l’importation du fichier de données DCM dans <span class="keyword"> Audience Manager</span>. </p> </td> 
+   <td colname="col2"> <p>Ajout de l’étape 7, sur ce que vous devez faire pour activer <span class="wintitle"> Fichiers journaux pratiques</span> après avoir configuré l’importation du fichier de données DCM dans <span class="keyword"> Audience Manager</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-comparison-operators.md"> Utilisation d’opérateurs de comparaison dans le générateur de caractéristiques</a> </p> </td> 
@@ -180,7 +180,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../dil/dil-class-overview/dil-coopsafe.md"> isCoopSafe</a> </p> </td> 
-   <td colname="col2"> <p>Nouvelle configuration pour contrôler la manière dont les données sont envoyées à l’Experience Cloud Device Co-op <span class="keyword">.</span> </p> </td> 
+   <td colname="col2"><i>Cette fonction a été abandonnée.</i> <p>Une nouvelle configuration permet de contrôler la manière dont les données sont envoyées à la variable <span class="keyword"> Experience Cloud Device Co-op</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../faq/faq-profile-merge.md"> FAQ sur les stratégies de fusion de profils et la représentation graphique des appareils</a> </p> </td> 
@@ -209,11 +209,11 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/profile-merge-rules/merge-rule-unsegment.md"> Stratégies de fusion de profils et processus de suppression de la segmentation des appareils</a> </p> </td> 
-   <td colname="col2"> <p>Nouveau contenu qui décrit le fonctionnement de la non-segmentation avec les <span class="wintitle"> règles de fusion de profils</span>. </p> </td> 
+   <td colname="col2"> <p>Nouveau contenu qui décrit le fonctionnement de la suppression de la segmentation avec <span class="wintitle"> Stratégies de fusion de profils</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/segments/segment-builder-data.md"> Données sur la population de segment et les caractéristiques dans le créateur de segments</a> </p> </td> 
-   <td colname="col2"> <p>Révision avec de nouvelles définitions qui tiennent compte de la façon dont les <span class="wintitle"> règles de fusion de profils</span> affectent les nombres de rapports. </p> </td> 
+   <td colname="col2"> <p>Révision avec de nouvelles définitions qui tiennent compte de la manière dont <span class="wintitle"> Stratégies de fusion de profils</span> affectent les nombres de rapports. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-data-buyers.md"> Audience Marketplace pour les acheteurs de données</a> </p> </td> 
@@ -258,7 +258,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/manage-folder-traits.md#edit-folder-trait"> Modification d’une caractéristique de dossier</a> </p> </td> 
-   <td colname="col2"> <p> Le workflow <b><span class="uicontrol"> Modifier</span></b> vous permet de modifier la source de données pour les caractéristiques du dossier. </p> </td> 
+   <td colname="col2"> <p> Le <b><span class="uicontrol"> Modifier</span></b> workflow vous permet de modifier la source de données pour les caractéristiques du dossier. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/manage-folder-traits.md#delete-folder-trait"> Suppression d’une caractéristique de dossier</a> </p> </td> 
@@ -282,11 +282,11 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/segments/segment-builder-data.md"> Données sur la population de segment et les caractéristiques dans le créateur de segments</a> </p> </td> 
-   <td colname="col2"> <p>Modification d’une mesure en <span class="wintitle"> Population totale des caractéristiques</span> à partir de <span class="wintitle"> Réalisations de caractéristiques uniques</span>. </p> </td> 
+   <td colname="col2"> <p>Modification d’une mesure en <span class="wintitle"> Population totale des caractéristiques</span> de <span class="wintitle"> Réalisations de caractéristiques uniques</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/segments/segment-builder.md"> Suppression de caractéristiques d’un segment</a> </p> </td> 
-   <td colname="col2"> <p>Instructions sur la manière de supprimer des caractéristiques d’un segment à l’aide de <span class="wintitle"> Créateur de segments</span>. </p> </td> 
+   <td colname="col2"> <p>Instructions relatives à la suppression de caractéristiques d’un segment à l’aide de <span class="wintitle"> Créateur de segments</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-manage-subscriptions.md"> Désactivation des flux de données : Pourquoi cela se produit et comment réagir</a> </p> </td> 
@@ -323,19 +323,19 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-lab/audience-lab-use-cases.md"> Cas d’utilisation d’Audience Lab</a> </p> </td> 
-   <td colname="col2"> <p>Une nouvelle section de notre documentation présente plusieurs cas d’utilisation de la fonction <span class="wintitle"> Audience Lab</span>. </p> </td> 
+   <td colname="col2"> <p>Une nouvelle section de notre documentation présente plusieurs cas d’utilisation de la fonction <span class="wintitle"> Audience Lab</span> fonction . </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-lab/audience-lab-use-cases.md#compare-models"> Comparaison de modèles dans Audience Lab</a> </p> </td> 
-   <td colname="col2"> <p>Vous pouvez utiliser plusieurs types et sources de modèles différents dans <span class="keyword"> Audience Manager</span>. <span class="wintitle"> Audience </span> Labs offre un moyen facile de comparer les taux de conversion de vos clients, entre vos principaux modèles. </p> </td> 
+   <td colname="col2"> <p>Vous pouvez utiliser plusieurs types et sources de modèles différents dans <span class="keyword"> Audience Manager</span>. <span class="wintitle"> Audience Lab</span> offre un moyen facile de comparer les taux de conversion de vos clients, sur vos principaux modèles. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-lab/audience-lab-use-cases.md#testing-creatives"> Test de créatifs sur plusieurs destinations</a> </p> </td> 
-   <td colname="col2"> <p>Utilisez <span class="wintitle"> Audience Lab</span> pour mesurer le nombre de conversions qu’un créatif génère entre différentes destinations. Ce cas pratique vous permet également de mesurer les conversions du créatif par rapport aux conversions naturelles. </p> </td> 
+   <td colname="col2"> <p>Utilisation <span class="wintitle"> Audience Lab</span> pour mesurer le nombre de conversions qu’un créatif génère entre différentes destinations. Ce cas pratique vous permet également de mesurer les conversions du créatif par rapport aux conversions naturelles. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../faq/faq-profile-merge.md"> FAQ sur les règles de fusion de profils</a> </p> </td> 
-   <td colname="col2"> <p>Ajout d’une nouvelle FAQ pour vous aider à répondre aux questions courantes <span class="wintitle"> Règle de fusion de profils</span> et représentation graphique des appareils. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une nouvelle FAQ pour aider à répondre aux questions courantes <span class="wintitle"> Stratégie de fusion de profils</span> et des questions graphiques des appareils. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/algorithmic-models/understanding-models.md#understanding-traitweight"> Présentation de TraitWeight</a> </p> <p><a href="../features/algorithmic-models/understanding-models.md#models-summary-view"> Mode Résumé des modèles</a> </p> </td> 
@@ -356,7 +356,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-event-calls/dcs-url-receive.md"> Réception de données du DCS</a> </p> </td> 
-   <td colname="col2"> <p>Les appels de réponse DCS HTTP contiennent désormais le champ <code> tid</code> . En cas d’incident, utilisez ce champ à des fins de débogage. </p> </td> 
+   <td colname="col2"> <p>Les appels de réponse DCS HTTP contiennent désormais le paramètre <code> tid</code> champ . En cas d’incident, utilisez ce champ à des fins de débogage. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../integration/sending-audience-data/batch-data-transfer-explained/batch-data-transfer-overview.md"> Présentation de l’envoi de données par lots vers Audience Manager</a> </p> </td> 
@@ -364,7 +364,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reporting/audience-optimization-reports/aor-advertisers/segment-performance.md"> Rapport de performances sur les segments</a> </p> </td> 
-   <td colname="col2" morerows="2"> <p>Ajout d’une note expliquant que les périodes d’analyse de 7 jours et 30 jours ne sont disponibles que pour les dates du dimanche <b><span class="uicontrol"> Date jusqu’à</span></b>. </p> </td> 
+   <td colname="col2" morerows="2"> <p>Ajout d’une note précisant que les périodes d’analyse de 7 jours et 30 jours ne sont disponibles que pour le dimanche. <b><span class="uicontrol"> Date jusqu’à</span></b> dates. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reporting/audience-optimization-reports/aor-advertisers/unique-user-reach.md"> Portée de l’utilisateur unique</a> </p> </td> 
@@ -385,7 +385,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
    <td colname="col2"> <p>Révision du contenu pour indiquer les éléments suivants : </p> 
     <ul id="ul_99C2ACF7B28F442B8F66A40525F1CAE3"> 
      <li id="li_679B6A359E7E471CBF377449EBC78827">Dans un nom de fichier, un trait de soulignement sépare le type d’événement de l’horodatage. </li> 
-     <li id="li_5012C420AC544B858246598575E59D8C">Avant le téléchargement, les fichiers doivent être compressés par gzip et avoir une extension de fichier <code> .gz</code>. </li> 
+     <li id="li_5012C420AC544B858246598575E59D8C">Avant le chargement, les fichiers doivent être compressés par gzip et avoir une variable <code> .gz</code> extension de fichier. </li> 
     </ul> </td> 
   </tr> 
   <tr> 
@@ -394,7 +394,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reference/demdex-calls.md"> Signification des appels vers le domaine Demdex</a> </p> </td> 
-   <td colname="col2"> <p>Ajout d’un nouveau document expliquant pourquoi <span class="keyword"> l’Audience Manager</span> effectue des appels au domaine <code> demdex.net</code>. </p> </td> 
+   <td colname="col2"> <p>Ajout d’un nouveau document expliquant pourquoi <span class="keyword"> Audience Manager</span> effectue des appels à la fonction <code> demdex.net</code> domaine. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="https://experienceleague.adobe.com/docs/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> Cookies Audience Manager</a> </p> </td> 
@@ -415,15 +415,15 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../api/dcs-intro/dcs-api-reference/dcs-keys.md"> Attributs pris en charge pour les appels de l’API DCS</a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour des préfixes de variable clé avec <code> _p</code>, identification des paramètres privés en Audience Manager. </p> </td> 
+   <td colname="col2"> <p>Mise à jour des préfixes de variables clés avec <code> _p</code>, identifiant les paramètres privés en Audience Manager. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-variable-prefixes.md"> Exigences de préfixe pour les variables clés</a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour des préfixes de variable clé avec <code> _p</code>, identification des paramètres privés en Audience Manager. </p> </td> 
+   <td colname="col2"> <p>Mise à jour des préfixes de variables clés avec <code> _p</code>, identifiant les paramètres privés en Audience Manager. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/segments/segment-builder.md#create-segment"> Créez un segment</a> </p> </td> 
-   <td colname="col2"> <p>Ajout d’autres fonctionnalités de recherche et de filtrage à la recherche avancée <b><span class="uicontrol"> Parcourir toutes les caractéristiques</span></b>. </p> </td> 
+   <td colname="col2"> <p>Ajout d’autres fonctionnalités de recherche et de filtrage à la variable <b><span class="uicontrol"> Parcourir toutes les caractéristiques</span></b> recherche avancée. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-dashboard.md"> Mode Liste des caractéristiques</a> </p> </td> 
@@ -443,7 +443,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/profile-merge-rules/merge-rules-overview.md"> Profile Link</a> </p> </td> 
-   <td colname="col2"> <p>Cette section contient du contenu nouveau et révisé afin de prendre en charge les options <span class="wintitle"> Profile Link</span> et de représentation graphique des appareils tiers. </p> </td> 
+   <td colname="col2"> <p>Cette section contient du contenu nouveau et révisé pour la prise en charge de <span class="wintitle"> Lien de profil</span> et options de représentation graphique des appareils tiers. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -476,7 +476,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../dil/dil-class-overview/dil-create.md#dil-create"> Création DIL</a> </p> </td> 
-   <td colname="col2"> <p>Révision de la description et ajout de liens connexes à la propriété <code> containerSNID</code> de <code> DIL.create</code>. </p> </td> 
+   <td colname="col2"> <p>Description révisée et ajout de liens connexes à <code> containerSNID</code> de <code> DIL.create</code>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/addressable-audiences.md#addressable-audience-metrics"> Mesures d’audience adressables</a> </p> </td> 
@@ -525,7 +525,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reference/ids-in-aam.md"> Index des identifiants dans Audience Manager</a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour avec le format attendu des identifiants d’appareil mobile (DAID) géré par <span class="keyword"> Audience Manager</span>. </p> </td> 
+   <td colname="col2"> <p>Mise à jour avec le format attendu des identifiants d’appareils mobiles (DAID) gérés par <span class="keyword"> Audience Manager</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-s3-filenames.md">Exigences en matière de nom et de taille de fichier Amazon S3 pour les données entrantes…</a> </p> </td> 
@@ -533,7 +533,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../faq/faq-features.md"> FAQ sur les fonctions et fonctionnalités de produit</a> </p> </td> 
-   <td colname="col2"> <p>Ajout d’une nouvelle entrée qui décrit l’<span class="keyword"> Experience Cloud</span> <span class="wintitle"> ID d’organisation</span>, y compris des informations sur la manière de le trouver. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une nouvelle entrée qui décrit le <span class="keyword"> Experience Cloud</span> <span class="wintitle"> ID d’organisation</span>, y compris des informations sur la manière de les trouver. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> 
@@ -541,11 +541,11 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
      <li id="li_EFAB62C108824AF8A56F93433D5259E4"><a href="../integration/receiving-audience-data/batch-outbound-transfers/outbound-template-macros.md">Macros de création de modèles sortants</a> (en anglais) </li> 
      <li id="li_9EC8F2B9D03446698C723871F63008F5"><a href="../integration/receiving-audience-data/batch-outbound-transfers/outbound-macro-examples.md"> Exemples de macro sortante</a> </li> 
     </ul> </td> 
-   <td colname="col2"> <p>Mise à jour afin d’inclure la macro <code> DPUUIDS</code>. </p> </td> 
+   <td colname="col2"> <p>Mise à jour pour inclure la variable <code> DPUUIDS</code> macro. </p> </td> 
   </tr> 
  </tbody> 
 </table>
 
 ## Années précédentes {#prev}
 
-Liens vers les notes de mise à jour et les modifications apportées à la documentation de [!DNL Audience Manager]. Pour consulter une archive des modifications antérieures au niveau [!DNL Experience Cloud], voir la section [Notes de mise à jour précédentes](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) .
+Liens vers [!DNL Audience Manager] notes de mise à jour et modifications de la documentation. Pour obtenir une archive des anciennes modifications au niveau de la propriété [!DNL Experience Cloud] niveau, voir [Notes de mise à jour précédentes](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) .
